# regexp-glushkov

./: .gitignore  cabal.project  regex-glushkov.cabal
bench/: BenchMain.hs
exe/: RegexRunner.hs
src/Text/Regex/: Glushkov.hs
test/: TestMain.hs
