cabal-version: 3.6

-- Created : 30 April 2023

name:
  regex-glushkov
version:
  0.1
synopsis:
  Efficient regexps without building automaton
description:
  TODO
copyright:
  (c) Sergey Vinokurov 2023
license:
  Apache-2.0
-- license-file:
--   LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

extra-source-files:
  Changelog.md
  Readme.md

homepage:
  https://github.com/sergv/regex-glushkov

source-repository head
  type: git
  location: https://github.com/sergv/regex-glushkov.git

common ghc-options
  default-language:
    GHC2021

  default-extensions:
    LambdaCase

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-type-defaults
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  -- if impl(ghc >= 8.10)
  --   ghc-options:
  --     -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: ghc-options
  exposed-modules:
    Text.Regex.Glushkov
  hs-source-dirs:
    src
  build-depends:
    -- , bitvec
    , base >= 4.16
    , mtl
    , prettyprinter-combinators
    , text >= 2.0
    , utf8-string
    , vector

test-suite test
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    test/TestMain.hs
  build-depends:
    , base >= 4.14
    , regex-glushkov
    , tasty
    , tasty-quickcheck
    , text
  ghc-options:
    -rtsopts
    -main-is TestMain

benchmark bench
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    bench/BenchMain.hs
  build-depends:
    , base >= 4.16
    , bytestring
    , deepseq
    , regex-base
    , regex-glushkov
    , regex-tdfa
    , prettyprinter
    , prettyprinter-combinators
    , tasty-bench >= 0.3.4
    , text
  ghc-options:
    -rtsopts
    -- -threaded
    -- "-with-rtsopts=-N -A32M"
    -main-is BenchMain

executable regex-runner
  import: ghc-options
  main-is:
    exe/RegexRunner.hs
  build-depends:
    , base >= 4.16
    , file-io
    , filepath >= 1.4.100
    , optparse-applicative
    , regex-glushkov
    , text
  ghc-options:
    -rtsopts
    -- -threaded
    -- "-with-rtsopts=-N -A32M"
    -main-is RegexRunner
